fixed header picture alignment on mobile

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,13 @@ h6 {
 
 .profile-img {
   border-radius: 100%;
-  width: 300px;
+  width: 30%;
+}
+
+@media (max-width: 762px) {
+  .profile-img {
+    width: 230px;
+  }
 }
 
 .header-subtitle {
